--- a/src/assets/files/sp.yaml
+++ b/src/assets/files/sp.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
   title: sp 
 servers:
-- url: http://localhost:9094/api/
+- url: http://localhost:9094/api/v1
 
 tags:
 - name: update
