--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "moment": "^2.29.2",
     "rxjs": "~7.5.0",
     "swagger-editor-dist": "^4.2.2",
     "tslib": "^2.3.0",
