--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxjs": "~7.5.0",
     "swagger-editor-dist": "^4.2.2",
     "tslib": "^2.3.0",
+    "xml-formatter": "^2.6.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -33,7 +34,7 @@
     "@angular/cli": "~13.3.2",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.48",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
