--- a/src/assets/files/sp.yaml
+++ b/src/assets/files/sp.yaml
@@ -5,7 +5,7 @@ info:
   title: sp 
 servers:
 - url: http://localhost:9094/api/v1
-- url: https://test-nvt-serviceprovider-service-rest.eu-south-1.elasticbeanstalk.com/serviceprovider/api-docs
+- url: https://testnvtserviceprovider.movyon.com/serviceprovider/api/v1/
 
 tags:
 - name: update
